/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package deviceinfra.api.deviceinfo;

option java_package = "com.google.devtools.deviceinfra.api.deviceinfo.proto";
option java_outer_classname = "DeviceLocatorProto";

message DeviceLocator {
  // REQUIRED
  // The uuid of the devices.
  string device_uuid = 1;

  // REQUIRED
  // The host name of the lab the device connects to.
  string host_name = 2;
}

/** The device locator list. */
message DeviceLocators {
  repeated DeviceLocator device_locator = 1;
}
